--- a/index.html
+++ b/index.html
@@ -11,9 +11,19 @@
 <body>
     <header>
         <section>
-            <div id="">
-
-            </div>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid ">
+                  <a class="navbar-brand" href="#">Home</a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse justify-content-center">
+                    <ul  id="navbarNav" class="navbar-nav" >
+                      
+                    </ul>
+                  </div>
+                </div>
+              </nav>
         </section>
     </header>
   
