--- a/index.html
+++ b/index.html
@@ -12,21 +12,24 @@
     <header>
         <section>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid ">
-                  <a class="navbar-brand" href="#">Home</a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
                   <div class="collapse navbar-collapse justify-content-center">
                     <ul  id="navbarNav" class="navbar-nav" >
                       
                     </ul>
                   </div>
-                </div>
               </nav>
         </section>
     </header>
-  
+    <main>
+        <section>
+            <div class="container">
+                <div id="news-body" class="row">
+                  <div class="col-4"></div>
+                  <div class="col-6"></div>
+                </div>
+              </div>
+        </section>
+    </main>
     <!-- javascript -->
     <script src="app.js"></script>
 <!-- bootstrap -->
