items length set

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
                     </ul>
                   </div>
               </nav>
+              <div class="text-center text-success">
+                <h5><span id="items"></span> Items found</h5>
+                </div>
+
         </section>
     </header>
     <main>
