--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                     </ul>
                   </div>
               </nav>
-              <div class="text-center text-success">
-                <h5><span id="items"></span> Items found</h5>
+              <div class="text-center text-sm-left bg-white rounded text-success py-2 mx-5 my-4">
+                <p><span id="items"></span>  items found for category Entertainment</p>
                 </div>
 
         </section>
